@startuml Club Management Models

class User {
  - id: int
  - username: String
  - password: String
  - passwordSalt: String
  - email: String
  - fullName: String
  - assignedClubId: Integer
  - isActive: boolean
  + User()
  + User(username: String, password: String)
  + getId(): int
  + getUsername(): String
  + setPassword(password: String): void
  + getAssignedClubId(): Integer
  + setAssignedClubId(clubId: Integer): void
  + isActive(): boolean
}

class Club {
  - id: int
  - name: String
  + Club()
  + Club(id: int, name: String)
  + getId(): int
  + getName(): String
  + setName(name: String): void
  + toString(): String
}

class Proposal {
  - id: int
  - studentId: int
  - filePath: String
  - status: String
  + Proposal()
  + Proposal(studentId: int, filePath: String)
  + getId(): int
  + getStudentId(): int
  + getStatus(): String
  + setStatus(status: String): void
  + getFilePath(): String
}

class ClubAllocation {
  - id: int
  - studentId: int
  - clubId: int
  - priority: int
  + ClubAllocation()
  + ClubAllocation(studentId: int, clubId: int, priority: int)
  + getId(): int
  + getStudentId(): int
  + getClubId(): int
  + getPriority(): int
}

User "many" o-- "1" Club : many-to-one
User --> Proposal : uses
ClubAllocation --> User : uses
ClubAllocation --> Club : uses

@enduml
